# ToMoBAR

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CMakeLists.txt  INSTALLATION  LICENSE  MANIFEST.in  README.rst  Readme.md  deploy_anaconda.sh  environment.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  run.sh  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: tomobar.astra_wrappers.astra_base.doctree  tomobar.astra_wrappers.astra_tools2d.doctree  tomobar.astra_wrappers.astra_tools3d.doctree  tomobar.astra_wrappers.doctree  tomobar.cuda_kernels.doctree  tomobar.data_fidelities.doctree  tomobar.doctree  tomobar.fourier.doctree  tomobar.methodsDIR.doctree  tomobar.methodsDIR_CuPy.doctree  tomobar.methodsIR.doctree  tomobar.methodsIR_CuPy.doctree  tomobar.regularisers.doctree  tomobar.regularisersCuPy.doctree  tomobar.supp.dicts.doctree  tomobar.supp.doctree  tomobar.supp.funcs.doctree  tomobar.supp.memory_estimator_helpers.doctree  tomobar.supp.params_search_LogPolar.doctree  tomobar.supp.suppTools.doctree
.doctrees/howto/: installation.doctree  use.doctree
.doctrees/introduction/: about.doctree  dependencies.doctree  references.doctree
.doctrees/reference/: api.doctree
.doctrees/tutorials/: basic_iter_recon.doctree  direct_recon.doctree  real_data_recon.doctree  regul_iter_recon.doctree  synthetic_recon.doctree
.github/workflows/: tomobar_conda_upload.yml  tomobar_docs.yml  tomobar_pypi_publish.yml  ubuntu.yml
.scripts/: conda_upload.sh  decrypt_secret.sh  my_secret.json.gpg
Demos/: DemoRec_2D_Parallel.m  DemoRec_2D_Parallel_Artifacts.m  DemoRec_2D_Parallel_Artifacts_OS.m  DemoRec_2D_Parallel_OS.m  DemoRec_3D_Parallel.m  DemoRec_RealData_Parallel.m  RealData.py  RealData2.py  tomophantom_2D_recon1.py  tomophantom_3D_artifacts_recon.py  tomophantom_3D_recon1.py
Demos/Matlab/: ADMM_2D_Parallel.m  ADMM_2D_RealData.m  FISTA_2D_Parallel.m  FISTA_2D_Parallel_Artifacts.m  FISTA_2D_Parallel_Artifacts_OS.m  FISTA_2D_Parallel_OS.m  FISTA_3D_ConeBeam.m  FISTA_3D_Parallel.m  FISTA_RealData_Parallel.m  adding_paths.m
Demos/Python/: Demo3D_GPU_control.py  DemoADMM_2D.py  DemoADMM_3D.py  DemoADMM_3DCuPy.py  DemoFBP_CuPy_3D.py  DemoFFD.py  DemoFISTA_2D.py  DemoFISTA_3D.py  DemoFISTA_NLTV_2D.py  DemoFISTA_artifacts2D.py  DemoFISTA_artifacts3D.py  DemoFISTA_real_artifacts3D.py  DemoFourier.py  DemoFourier_cpu_2D.py  DemoIterative_2D.py  DemoIterative_3D.py  DemoReconCuPy_3D.py  Demo_CuPy_3D.py  Demo_CuPy_3D_search_optimal.py  Demo_CuPy_3D_temp.py  Demo_Direct_cupy_3D.py  Demo_RealData.py  Demo_RealData2.py  Demo_RealData2CuPy.py  Demo_RealData3.py  Demo_RealData3_bench.py  Demo_RealData3_memory_est.py  Demo_RealData3_temp.py  Demo_RealDataCuPy.py  Demo_tomophantom_recon1.py  MultiGPU_demo.py  benchmark_fista.py  benchmark_half.py  benchmark_lprec_padding.py  debug_fista.py  i12_dataset6_example.py  padding.py
Demos/methods_IR_legacy/: DemoFISTA_artifacts2D.py  DemoFISTA_artifacts3D.py  DemoIterative_2D.py  DemoIterative_3D.py  Demo_RealData2.py  MultiGPU_demo.py  benchmark_SWLS.py
Python/: test_reconstructor-os_phantom.py
Wrappers/Python/: setup.py  (+1 more)
_modules/: index.html
_static/: documentation_options.js
api/: tomobar.astra_wrappers.astra_base.html  tomobar.astra_wrappers.astra_tools2d.html  tomobar.astra_wrappers.astra_tools3d.html  tomobar.astra_wrappers.html  tomobar.cuda_kernels.html  tomobar.data_fidelities.html  tomobar.fourier.html  tomobar.html  tomobar.methodsDIR.html  tomobar.methodsDIR_CuPy.html  tomobar.methodsIR.html  tomobar.methodsIR_CuPy.html  tomobar.regularisers.html  tomobar.regularisersCuPy.html  tomobar.supp.dicts.html  tomobar.supp.funcs.html  tomobar.supp.html  tomobar.supp.memory_estimator_helpers.html  tomobar.supp.params_search_LogPolar.html  tomobar.supp.suppTools.html
conda-recipe/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml  tomobar_env.txt  tomobar_env_20_06_22.txt
data/: RealDataDend.mat  exportDemoRD2Data.m  sinoi23_13282_angles.npy
docs/: sphinx-build.sh  sphinx_build_setup.rst
howto/: installation.html  use.html
introduction/: about.html  dependencies.html  references.html
main_func/: FISTA_REC.m~
measurement/: measure.sh  measurement_target.py  parse_sqlite.py
reference/: api.html
scripts/: conda_upload.sh  my_secret.json.gpg
src/: CMakeLists.txt
src/Core/: CMakeLists.txt
src/Core/functions_CPU/: RingWeights_core.c  RingWeights_core.h  utils.c  utils.h
src/Core/include/: RingWeights_core.h  dll_export.h  utils.h
src/Python/: CMakeLists.txt  setup-tomobar.py.in  setup.py
src/Python/Demos/: Demo3D_vec_geom.py  DemoADMM_2D.py  DemoADMM_3D.py  DemoFISTA_2D.py  DemoFISTA_3D.py  DemoFISTA_NLTV_2D.py  DemoFISTA_RealData.py  DemoFISTA_RealData2.py  DemoFISTA_artifacts2D.py  Demo_RealData.py  Demo_RealData2.py
src/Python/conda-recipe/: build.sh  build.sh~  conda_upload.sh  meta.yaml
src/Python/src/: cpu_wrappers.pyx
src/Python/temp/: read_hdf5.py  smoothSignal.py
src/Python/tomobar/: methodsDIR.py  methodsDIR.py~  methodsIR.py  methodsIR.py~
src/Python/tomobar/supp/: astraOP.py  suppTools.py
src/Python/tomorec/: methodsDIR.py  methodsIR.py
tests/: conftest.py  test.py  test_RecToolsDIR.py  test_RecToolsDIRCuPy.py  test_RecToolsIR.py  test_RecToolsIRCuPy.py  test_astratools2d.py  test_direct_recon.py  test_direct_recon_cupy.py  test_fourier.py  test_iter_recon.py  test_iter_recon_cupy.py  test_projectors.py  test_projectorsCuPy.py  test_regularisers.py  test_tomobarCPU_DIR.py  test_tools.py
tests_gpu/: conftest.py  test_direct_recon.py  test_direct_recon_cupy.py  test_iter_recon.py  test_iter_recon_cupy.py
tomobar/: __init__.py  astra_wrappers.py  data_fidelities.py  fourier.py  methodsCuPy.py  methodsDIR.py  methodsDIR_CuPy.py  methodsDIR_NEW.py  methodsIR.py  methodsIR_CuPy.py  projectors.py  projectorsCuPy.py  recon_base.py  regularisers.py  regularisersCuPy.py
tutorials/: basic_iter_recon.html  direct_recon.html  real_data_recon.html  regul_iter_recon.html  synthetic_recon.html
(+141 files in other folders)
