[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
packages = ["tomobar",
            "tomobar.supp",
            "tomobar.cuda_kernels",
            "tomobar.astra_wrappers",
            ]

[tool.setuptools.package-data]
tomobar = ["*.cu", "*.cuh"]  # include cuda kernels in package

[tool.setuptools-git-versioning]
enabled = true
template = "{tag}"
dev_template = "{tag}"

[project]
name = "tomobar"
version = "2025.03"
description = "TOmographic MOdel-BAsed Reconstruction (ToMoBAR) software"
readme = "Readme.md"
license = {text = "GPLv3"}
authors = [
    {name = "Daniil Kazantsev", email = "daniil.kazantsev@diamond.ac.uk"},
    {name = "Viktor Nikitin", email = "vnikitin@anl.gov"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.10",
    "Environment :: GPU :: NVIDIA CUDA"
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "astra-toolbox>=2.3.0",
    "scipy",
    "pillow",
    "scikit-image"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-xdist",
  "flake8",
  "pyproject-flake8",
  "pydocstyle",
  "toml",
  "imageio",
  "h5py"
]

[project.urls]
"Repository" = "https://github.com/dkazanc/ToMoBAR"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
   "-vv",
   "-ra",
   "-q",
   "--tb=native",
]
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnknownMarkWarning",
    "ignore::scipy.stats.ConstantInputWarning",
]

[tool.coverage.run]
data_file = "/tmp/tomobar.coverage"

[tool.coverage.paths]
# Tests are run from installed location, map back to the src directory
source = [
    "tomobar",
    "**/site-packages/"
]

[tool.mypy]
# Ignore missing stubs for modules we use
ignore_missing_imports = true

[tool.isort]
profile = "black"
float_to_top = true

[tool.pydocstyle]
convention = "google"
add-ignore = [
    "D100", # Ignore missing docstrings in public modules
    "D104", # Ignore missing docstrings in public packages
    "D418", # Ignore missing docstrings in dunder methods; See: https://github.com/PyCQA/pydocstyle/issues/525
]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
